--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,9 @@ test:
   before_script:
     - go get github.com/jstemmer/go-junit-report
   script:
-    - go test -v -coverprofile=cover.out ./... | go-junit-report > report.xml 
+    - go test -v -coverprofile=cover.out ./... | tee >(go-junit-report > report.xml)
+    - go tool cover -func cover.out
+  coverage: '/^total:\t+\(statements\)\t+(\d+\.\d+)%/'
   artifacts:
     reports:
       junit: 
