--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,21 +5,27 @@ stages:
   - build
 
 before_script:
-  - mkdir ~/.ssh && echo -n "${SSH_CI_KEY}" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+  # https://docs.gitlab.com/ee/ci/ssh_keys/
+  - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
+  - eval $(ssh-agent -s)
+  - echo "$SSH_CI_KEY" | tr -d '\r' | ssh-add - > /dev/null
+  - mkdir -p ~/.ssh && chmod 600 ~/.ssh
+  - echo "gitlab.com,35.231.145.151 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBFSMqzJeV9rUzU4kWitGjeR4PWSa29SPqJ1fVkhtj3Hw9xjLVXVYrU9QlYWrOLXBpQ6KWjbjTDTdDkoohFzgbEY=" >> ~/.ssh/known_hosts
+
+  # Force use of ssh urls instead of https for gitlab.com. Has to be done before any go get...
   - git config --global url."git@gitlab.com:".insteadOf "https://gitlab.com/"
 
+  # Install global go tools
+  - go install golang.org/x/lint/golint
+  - go get github.com/jstemmer/go-junit-report
+
 lint:
-  image: golang:1.12
   stage: test
-  before_script:
-    - go install golang.org/x/lint/golint
   script:
     - golint -set_exit_status ./...
 
 test:
   stage: test
-  before_script:
-    - go get github.com/jstemmer/go-junit-report
   script:
     - go test -v -coverprofile=cover.out ./... | tee >(go-junit-report > report.xml)
     - go tool cover -func cover.out
@@ -31,7 +37,6 @@ test:
     expire_in: 1 week
 
 build:
-  image: golang:1.12
   stage: build
   script:
     - ./scripts/build.sh
