--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,11 +11,11 @@ cache:
     - .cache/
 
 after_script:
-  cp -R $GOPATH .cache
+  - cp -R $GOPATH .cache
 
 before_script:
   # Cache only work from project root so we move gopath there to allow caching
-  cp -R .cache $GOPATH
+  - cp -R .cache $GOPATH
 
   # https://docs.gitlab.com/ee/ci/ssh_keys/
   - 'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'
