--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,3 +40,18 @@ build:
   #   paths:
   #     - bin/*
   #   expire_in: 1 week
+
+docker-build:
+  image: docker:stable
+  stage: build
+  tags:
+    - docker
+  services:
+    - docker:dind
+  script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - export BUILDVERSION=${CI_COMMIT_REF_NAME//\//_} # stip / off the branch name and replace by _ to have a valid docker tag format
+    - echo "Building docker image with BUILDVERSION=${BUILDVERSION}"
+    - ./scripts/docker-build.sh
+    - docker push registry.gitlab.com/teserakt/c2ae/api:${BUILDVERSION}
+    - docker push registry.gitlab.com/teserakt/c2ae/cli:${BUILDVERSION}
