--- a/configs/config.yaml.example
+++ b/configs/config.yaml.example
@@ -20,13 +20,13 @@ db-file: /tmp/c2ae.sqlite
 ## set to true to show detailed logging of database operations
 #db-logging: 1
 ## host of the db
-db-host: localhost
+db-host: 127.0.0.1
 ## db name
 db-database: c2ae
 ## passphrase used to derive the key to encrypt keys in the db
 db-encryption-passphrase: meh
-## TLS connection: enable || selfsigned || insecure
-db-secure-connection: enable
+## TLS connection: enabled || selfsigned || insecure
+db-secure-connection: enabled
 # Postgres database schema
 # db-schema: e4_c2ae_test
 
