--- a/configs/config.yaml.example
+++ b/configs/config.yaml.example
@@ -14,21 +14,21 @@ db-type: sqlite3
 ##
 db-file: /tmp/c2ae.sqlite
 ## username to connect to postgres
-#db-username: e4_c2ae_test
+#db-username: c2ae_test
 ## password to connect to postgres
 #db-password: teserakte4
 ## set to true to show detailed logging of database operations
 #db-logging: 1
 ## host of the db
-db-host: 127.0.0.1
+#db-host: 127.0.0.1
 ## db name
-db-database: c2ae
+#db-database: e4
 ## passphrase used to derive the key to encrypt keys in the db
-db-encryption-passphrase: meh
+#db-encryption-passphrase: meh
 ## TLS connection: enabled || selfsigned || insecure
-db-secure-connection: enabled
+#db-secure-connection: enabled
 # Postgres database schema
-# db-schema: e4_c2ae_test
+# db-schema: c2ae_test
 
 # C2 settings
 ###############################################################
