--- a/configs/config.yaml.example
+++ b/configs/config.yaml.example
@@ -26,7 +26,7 @@ db-file: /tmp/c2ae.sqlite
 ## passphrase used to derive the key to encrypt keys in the db
 #db-encryption-passphrase: meh
 ## TLS connection: enabled || selfsigned || insecure
-#db-secure-connection: enabled
+db-secure-connection: enabled
 # Postgres database schema
 # db-schema: c2ae_test
 
