--- a/configs/config.yaml.example
+++ b/configs/config.yaml.example
@@ -9,6 +9,7 @@ listen-grpc: localhost:5556
 grpc-cert: c2ae-cert.pem
 grpc-key: c2ae-key.pem
 listen-http: localhost:8886
+# address to use to connect from the http grpc-gateway to the c2ae api grpc server
 http-grpc-addr: 127.0.0.1:5556
 http-cert: c2ae-cert.pem
 http-key: c2ae-key.pem
