Added support of C2 Events triggers
Unified TriggerType_ClientSubscribed and TriggerType_ClientUnsubscribed
to a single TriggerType_Event. EventType being defined in trigger
settings.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,8 @@ all:
     - go get github.com/jstemmer/go-junit-report
     # Run lint and tests
     - golint -set_exit_status ./...
-    - go test -v -coverprofile=cover.out -timeout 10s -race ./... | tee >(go-junit-report > report.xml)
+    # Timeout need at least 30s when testing with C2AETEST_POSTGRES=1 to let it time to drop / create the schema between tests.
+    - go test -v -coverprofile=cover.out -timeout 30s -race ./... | tee >(go-junit-report > report.xml)
     - go tool cover -func cover.out
     - ./scripts/build.sh
   coverage: '/^total:\t+\(statements\)\t+(\d+\.\d+)%/'
