--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,8 @@ all:
     - golint -set_exit_status ./...
     # Timeout need at least 30s when testing with C2AETEST_POSTGRES=1 to let it time to drop / create the schema between tests.
     - go test -v -coverprofile=cover.out -timeout 30s -race ./... | tee >(go-junit-report > report.xml)
-    - go tool cover -func cover.out
+    - cat cover.out | grep -v "_mocks.go" > cover_filtered.out
+    - go tool cover -func cover_filtered.out
     - ./scripts/build.sh
   coverage: '/^total:\t+\(statements\)\t+(\d+\.\d+)%/'
   artifacts:
