--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -54,12 +54,26 @@ jobs:
         env:
           CI_USERNAME: TeserRex
           CI_ACCESS_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
+          GOOS: ${{ matrix.buildOS }}
+          GOARCH: amd64
+          CGO_ENABLED: 0
         with:
           project: ${{ matrix.project }}
-          goos: ${{ matrix.buildOS }}
-          goarch: amd64
+
+      - uses: teserakt-io/gh-actions/docker-build@master
+        if: matrix.buildOS == 'linux' # Only build image for linux
+        with:
+          branch: ${{ github.ref }}
+          binary_path: ./${{ steps.build.outputs.binary-path }}
+          image_name: "c2ae-${{ matrix.project }}"
+          dockerfile: "./docker/c2ae/Dockerfile"
+          dockerfile_target: "c2ae-${{ matrix.project }}"
+          registry_endpoint: "eu.gcr.io"
+          registry_name: "${{ secrets.GCR_PROJECT }}"
+          registry_username: _json_key
+          registry_password: ${{ secrets.GCR_TOKEN }}
 
       - uses: actions/upload-artifact@master
         with:
-          name: ${{ matrix.project }}-${{ matrix.buildOS }}-amd64
+          name: c2ae-${{ matrix.project }}-${{ matrix.buildOS }}-amd64
           path: ./${{ steps.build.outputs.binary-path }}
