Added dynamic binary_path

--- a/docker/c2ae/Dockerfile
+++ b/docker/c2ae/Dockerfile
@@ -17,10 +17,10 @@ EXPOSE 8886
 
 VOLUME /opt/e4/configs
 
-ENTRYPOINT /opt/e4/bin/c2ae-api
-
-COPY ./bin/c2ae-api /opt/e4/bin/c2ae-api
+COPY $binary_path /opt/e4/bin/c2ae-api
 COPY ./configs/ /opt/e4/configs
+
+ENTRYPOINT /opt/e4/bin/c2ae-api
 
 ###########################################################
 #
@@ -29,9 +29,6 @@ COPY ./configs/ /opt/e4/configs
 ###########################################################
 FROM alpine AS c2ae-cli
 
-COPY ./docker/c2ae/cli-entrypoint.sh /usr/local/bin/entrypoint.sh
-RUN chmod +x /usr/local/bin/entrypoint.sh
-
 WORKDIR /opt/e4
 
 VOLUME /opt/c2ae/c2ae-cert.pem
@@ -39,6 +36,8 @@ VOLUME /opt/c2ae/c2ae-cert.pem
 ENV C2AE_API_ENDPOINT="localhost:5556"
 ENV C2AE_API_CERT="/opt/c2ae/c2ae-cert.pem"
 
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+COPY $binary_path /opt/e4/bin/c2ae-cli
+COPY ./docker/c2ae/cli-entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
 
-COPY ./bin/c2ae-cli /opt/e4/bin/c2ae-cli
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
