--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -64,7 +64,7 @@ jobs:
         if: matrix.buildOS == 'linux' # Only build image for linux
         with:
           branch: ${{ github.ref }}
-          binary_path: ./${{ steps.build.outputs.binary-path }}
+          docker_build_args: "--build-arg binary_path=./${{ steps.build.outputs.binary-path }}"
           image_name: "c2ae-${{ matrix.project }}"
           dockerfile: "./docker/c2ae/Dockerfile"
           dockerfile_target: "c2ae-${{ matrix.project }}"
