--- a/docker/c2ae/Dockerfile
+++ b/docker/c2ae/Dockerfile
@@ -21,6 +21,9 @@ VOLUME /opt/e4/configs
 
 COPY $binary_path /opt/e4/bin/c2ae-api
 COPY ./configs/ /opt/e4/configs
+HEALTHCHECK --interval=1m --timeout=5s \
+    # Have to disable the cert checks as Busybox wget doesn't have the GNU wget options to specify a custom ca cert.
+    CMD [ "$(wget --no-check-certificate -qO- https://127.0.0.1:8886/health-check)" == '{"Code":"0","Status":"OK"}' ] || exit 1
 
 ENTRYPOINT /opt/e4/bin/c2ae-api
 
